# feature-forge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: research-question.md
.github/workflows/: ci.yml
case-studies/: svg-forge-public.md
docs/: PRINCIPLES.md  PUBLICATION_POLICY.md  REDDIT_RESEARCH_PROTOCOL.md  ROADMAP.md  VISION.md
examples/: reviews.csv  reviews.json
src/feature_forge/: __init__.py  analysis.py  cli.py  export.py  models.py
src/feature_forge/fetchers/: __init__.py  apple_app_store.py  base.py  google_play.py
src/feature_forge/loaders/: __init__.py  _common.py  csv_loader.py  json_loader.py
src/feature_forge/pipeline/: __init__.py  clean.py  cluster.py  embed.py  score.py
src/feature_forge/report/: __init__.py  markdown.py
tests/: conftest.py  test_clean.py  test_cli.py  test_cluster.py  test_embed.py  test_export.py  test_fetchers.py  test_loaders.py  test_report.py
