[project]
name = "feature-forge"
version = "0.1.0"
description = "Validate product ideas against real user pain points mined from app reviews."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Feature Forge contributors" }]
keywords = ["reviews", "product-discovery", "nlp", "clustering", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "rich>=13.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/pchuri/feature-forge"
Repository = "https://github.com/pchuri/feature-forge"

[project.scripts]
feature-forge = "feature_forge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feature_forge"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# Typer's API intentionally uses function calls (Argument/Option) as defaults.
"src/feature_forge/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
packages = ["feature_forge"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
